# Xi

./: .gitignore  pyproject.toml
.xi/: xi.toml
.xi/commands/: benchmark.toml  download.toml  inference.toml  install.toml  runs.toml  train.toml
xi/: __init__.py  manage.py
xi/xis/: .eslintrc.json  next.config.js  package-lock.json  package.json
xi/xis/app/: globals.css  layout.tsx  page.tsx
xi/xis/app/dashboard/: page.tsx
xi/xis/app/data/: page.tsx
xi/xis/app/inference/: page.tsx
xi/xis/app/models/: page.tsx
xi/xis/app/runs/: page.tsx
xi/xis/app/settings/: page.tsx
xi/xis/app/training/: page.tsx
xi/xis/components/: app-bootstrap.tsx  providers.tsx  splash-screen.tsx  welcome-screen.tsx
xi/xis/components/layout/: app-menu-bar.tsx  app-window.tsx  app-windows.tsx  apps-context.tsx  context-menu.tsx  file-explorer-window.tsx  global-overlay.tsx  header.tsx  index.ts  inference-window.tsx  main-layout.tsx  monitor-popup.tsx  monitor-window.tsx  network-popup.tsx  notification-popup.tsx  run-orchestrator.tsx  sidebar-context.tsx  sidebar-panel.tsx  (+2 more)
xi/xis/lib/: utils.ts
xi/xis/styles/: animations.css  effects.css  index.css  utilities.css  variables.css
xi/xis/types/: babel-standalone.d.ts  dynamic.ts  monitor.ts  training.ts
xi/xsc/: __init__.py
xi/xsc/api/: __init__.py
xi/xsc/app/: __init__.py  dependencies.py  launcher.py  server.py
xi/xsc/config/: generator.py
xi/xsc/executor/: argv.py  execute.py  process.py
xi/xsc/launcher/: __init__.py  backend.py  frontend.py  launcher.py
xi/xsc/server/: __init__.py  app.py
xi/xsc/service/: __init__.py
xi/xsc/session/: __init__.py  notification.py  session.py
xi/xsc/xar/: __init__.py  loader.py  protocol.py  registry.py  session.py
xi/xsc_backup/config/: __init__.py  defaults.py  loader.py
xi/xsc_backup/core/: dc.py
xi/xsc_backup/executor/: __init__.py  executor.py  persistence.py  stream.py
xi/xsc_backup/launcher/: process.py
xis/: package-lock.json  package.json  postcss.config.js  tailwind.config.ts
xis/app/: page.tsx
xis/app/data/: page.tsx
xis/app/inference/: page.tsx
xis/app/models/: page.tsx
xis/app/runs/: page.tsx
xis/app/settings/: page.tsx
xis/app/training/: page.tsx
xis/components/: api-access-guard.tsx  app-bootstrap.tsx  handshake-guard.tsx
xis/components/layout/: app-menu-bar.tsx  app-window.tsx  apps-context.tsx  file-explorer-window.tsx  header.tsx  index.ts  notification-popup.tsx  sidebar.tsx
xis/components/ui/: badge.tsx  card.tsx  dropdown-menu.tsx  progress.tsx  scroll-area.tsx  select.tsx  slider.tsx  switch.tsx  tabs.tsx
xis/lib/: index.ts
xis/lib/api/: explorer-ws.ts  runs-ws.ts  training-ws.ts  welcome-ws.ts
xis/lib/stores/: chat-store.ts  index.ts  runs-store.ts
xis/styles/: index.css  utilities.css  variables.css
xis/styles/components/: badge.css  dialog.css  global-overlay.css  menu.css  popup.css  progress.css  run-list.css  tabs.css  window.css
xis/styles/layouts/: sidebar.css
xis/types/: config.ts  data.ts  index.ts  inference.ts  monitor.ts
xsc/: __init__.py  pyproject.toml
xsc/cli/: __init__.py  main.py
xsc/config/: __init__.py  generator.py  loader.py
xsc/config/schema/: environment.py
xsc/core/: __init__.py
xsc/core/types/: system.py
xsc/executor/: __init__.py  executor.py  persistence.py
xsc/launcher/: __init__.py  frontend.py  launcher.py
xsc/server/: __init__.py  app.py
xsc/server/hardware/: __init__.py
xsc/server/middleware/: __init__.py
xsc/server/router/: __init__.py  filesystem.py  handshake.py  health.py  notifications.py  runs.py  xi.py
xsc/server/service/: __init__.py
xsc/server/service/welcome/: __init__.py  agreement.py  setup.py  validator.py
xsc/server/websocket/: __init__.py  explorer.py  monitor.py  runs.py  welcome.py
xsc/session/: __init__.py  notification.py  session.py
(+135 files in other folders)
